gcc/testsuite/rust/rustc/ui/issues/issue-11692-2.rs
fn main() {
    concat!(test!()); // { dg-error "" "" { target *-*-* } }
}

